--- a/index.html
+++ b/index.html
@@ -30,10 +30,17 @@
           Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
           "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
           "Noto Color Emoji";
+          -webkit-background-size: cover;
+          -moz-background-size: cover;
+          -o-background-size: cover;
+          background-size: cover;
       }
 
       .bg {
         background:url('img/bgimg.png');
+        background-size: auto 100%;
+        background-repeat: no-repeat;
+        background-position: left top;
 
       }
 
