--- a/index.html
+++ b/index.html
@@ -71,16 +71,19 @@
     <br>
     <br>
     <br>
+    <br>
+    <br>
+    <br>
     
     <div class="container mx-auto h-screen">
       <div class="text-center px-3 lg:px-0">
         <h1
-          class="text-white my-4 text-2xl md:text-3xl lg:text-5xl font-black leading-tight"
+          class="my-4 text-2xl md:text-3xl lg:text-5xl font-black leading-tight"
         >
           Coming Soon!
         </h1>
         <p
-          class="leading-normal text-white text-base md:text-xl lg:text-2xl mb-8"
+          class="leading-normal text-gray-800 text-base md:text-xl lg:text-2xl mb-8"
         >
           Find the menus of bars and restaurants around you.
         </p>
