worked on responsiveness of subscriber form

--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
       <div class="container px-3 mx-auto flex flex-wrap flex-col md:flex-row items-center">
         <!--Left Col-->
         <div class="flex flex-col w-full md:w-2/5 justify-center items-start text-center md:text-left">
-          <h1 class="my-4 text-5xl font-bold leading-tight">Find & share menus <br>
-            of your favorite <br>
+          <h1 class="my-4 text-5xl font-bold leading-tight">Find & share menus 
+            of your favorite
             bars/restaurants !</h1>
-          <p class="leading-normal text-2xl mb-8"> Sometimes you just wish you knew the menu of <br>
-            restaurants and bars around you before making <br>
+          <p class="leading-normal text-2xl mb-8"> Sometimes you just wish you knew the menu of
+            restaurants and bars around you before making
             a visit.Want to try it first ? Sign up for free</p>
         
             <button class="mx-auto lg:mx-0 bg-orange-500 px-3 hover:bg-yellow-500 text-white font-bold py-2 px-4 rounded"><a href="subscribers.html"</a> 
