--- a/subscribers.html
+++ b/subscribers.html
@@ -26,7 +26,7 @@
   </head>
 <body>
 
-   <div class="w-full max-w-xs px-8 py-6">
+   <div class="max-w-sm sm:max-w-md md:max-w-lg lg:max-w-xl xl:max-w-2x p-16">
     <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4" form name="subcribers" method="POST" action="success.html"  netlify>
       <div class="mb-4">
         <label class="block text-gray-700 text-sm font-bold mb-2" for="First name">
