--- a/success.html
+++ b/success.html
@@ -28,6 +28,7 @@
     <div class="bg-teal-100 border-t-4 border-teal-500 rounded-b text-teal-900 px-4 py-3 shadow-md" role="alert">
             <p class="font-bold">Thank you for signing up to use KoolMenu</p>
             <p class="text-sm">We will keep you updated on the progress of the app</p>
+            <a href="index.html">Go to Home</a> 
           </div>
         </div>
       </div>
