worked on the responsiveness

--- a/index.html
+++ b/index.html
@@ -95,8 +95,7 @@
         <!--Left Col-->
         <div class="flex flex-col w-full md:w-2/5 justify-center items-start text-center md:text-left">
           <h1 class="my-4 text-5xl font-bold leading-tight">Find & share menus 
-            of your favorite
-            bars/restaurants !</h1>
+            of your favorite restaurants!</h1>
           <p class="leading-normal text-2xl mb-8"> Sometimes you just wish you knew the menu of
             restaurants and bars around you before making
             a visit.Want to try it first ? Sign up for free</p>
